Add provided update checkers, loader update checkers (#711)
- Add update checkers for Fabric Loader and Quilt Loader
- Add API for mods to provide update checkers for other mods